--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -8,7 +8,7 @@
       - 'master':
           branch: 'master'
     mvn-settings: 'modeling-toscaparsers-settings'
-    build-node: ubuntu1604-basebuild-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     subproject:
       - 'javatoscachecker':
           pattern: 'javatoscachecker/**'
@@ -17,3 +17,4 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
+
