--- a/jjb/usecaseui/usecase-ui-server.yaml
+++ b/jjb/usecaseui/usecase-ui-server.yaml
@@ -11,7 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-daily'
     files: '**'
     archive-artifacts: ''
