--- a/jjb/usecaseui/usecase-ui.yaml
+++ b/jjb/usecaseui/usecase-ui.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
       - '{project-name}-{stream}-docker-java-daily'
     files: '**'
     archive-artifacts: ''
