--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1007,6 +1007,7 @@
           properties-file: version.properties
       - maven-target:
           maven-version: '{maven-version}'
+          pom: '{pom}'
           goals: 'versions:set versions:update-child-modules versions:commit -B'
           properties:
             - 'newVersion=${{release_version}}'
