--- a/jjb/multicloud/multicloud-openstack-vmware-vesagent-python.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-vesagent-python.yaml
@@ -11,6 +11,6 @@
     subproject:
       - 'vesagent':
           path: 'vesagent'
-          pattern: 'py/**'
+          pattern: 'vesagent/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
