--- a/jjb/portal/portal-sdk.yaml
+++ b/jjb/portal/portal-sdk.yaml
@@ -23,6 +23,8 @@
           branch: 'master'
       - 'release-1.3.0':
           branch: 'release-1.3.0'
+      - 'release-1.3.1':
+          branch: 'release-1.3.1'
     mvn-settings: 'portal-sdk-settings'
     files: '**'
     archive-artifacts: ''
