--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
@@ -8,7 +8,7 @@
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-daily':
-          docker-pom: 'logging-analytics/pomba/pomba-context-aggregator/pom.xml'
+          docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
     project: logging-analytics/pomba/pomba-context-aggregator
