--- a/jenkins-config/clouds/openstack/cattle/centos7-redis-4c-4g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/centos7-redis-4c-4g.cfg
@@ -1,3 +1,3 @@
-IMAGE_NAME=Ubuntu 16.04 - redis - 20180101-1003
+IMAGE_NAME=CentOS 7 - redis - 20180805-2225
 LABELS=centos7-redis-4c-4g
 HARDWARE_ID=v2-highcpu-4
