--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -44,3 +44,26 @@
         name: python-tox
         state: present
       become: true
+
+    - apt_repository:
+        repo: ppa:jonathonf/python-3.6
+        state: present
+      become: true
+
+    - name: Update and upgrade apt packages
+      apt:
+        upgrade: yes
+        update_cache: yes
+      become: true
+
+    - name: Install Python 3.6 and packages
+      apt:
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - python3.6
+        - python3.6-dev
+        - libssl-dev
+        - libmysqlclient-dev
+        - gcc
+      become: true
