--- a/jjb/sdc/sdc-jtosca.yaml
+++ b/jjb/sdc/sdc-jtosca.yaml
@@ -29,5 +29,6 @@
     project-name: 'sdc-jtosca'
     branch: 'master'
     mvn-settings: 'sdc-jtosca-settings'
+    mvn-params: '-Dsonar.branch.name=${branch}'
     mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-opts: '-Xmx1024m'
