--- a/jenkins-config/clouds/openstack/cattle/ubuntu1604-docker-8c-8g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/ubuntu1604-docker-8c-8g.cfg
@@ -1,3 +1,3 @@
-IMAGE_NAME=Ubuntu 16.04 - docker - 20180101-1003
+IMAGE_NAME=ZZCI - Ubuntu 16.04 - docker - x86_64 - 20180813-212616.934
 LABELS=ubuntu1604-docker-8c-8g
 HARDWARE_ID=v2-highcpu-8
