--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -75,9 +75,9 @@
           build_script: 'cd kubernetes/ && make all'
           files: '**'
       - '{project-name}-{subproject}-{stream}-verify-helm':
-          build_script: 'cd kubernetes/ && make {subproject}'
+          build_script: 'cd kubernetes/ && make common && make {subproject}'
       - '{project-name}-{subproject}-{stream}-merge-helm':
-          build_script: 'cd kubernetes/ && make {subproject}'
+          build_script: 'cd kubernetes/ && make common && make {subproject}'
       - '{project-name}-{stream}-update-helm-weekly':
           files: '**'
           build_script: 'cd kubernetes/ && make all'
