--- a/jjb/sdnc/sdnc-apps.yaml
+++ b/jjb/sdnc/sdnc-apps.yaml
@@ -35,3 +35,21 @@
     mvn-settings: 'sdnc-apps-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: sdnc-apps-docker
+    project-name: 'sdnc-apps'
+    jobs:
+      - 'docker-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'sdnc/apps'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdnc-apps-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: queue-docker-4c-4g
+
