--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -15,6 +15,7 @@
     # default params for helm jobs
     pre_build_script: ''
     post_build_script: ''
+    build_script: ''
 
     #####################
     # Job Configuration #
@@ -42,10 +43,14 @@
     publishers:
       - lf-infra-publish
 
-- helm_verify_boiler_plate: &helm_verify_boiler_plate
-    name: helm_verify_boiler_plate
+#################
+# JOB TEMPLATES #
+#################
+- job-template:
+    name: '{project-name}-{stream}-verify-helm'
+    # Job template for helm verify jobs
 
-    concurrent: true
+    <<: *helm_job_boiler_plate
 
     scm:
       - gerrit-trigger-scm:
@@ -60,9 +65,19 @@
           project: '{project}'
           branch: '{branch}'
           files: '{files}'
+      - comment-added-contains-event:
+          comment-contains-value: '^(recheck|reverify)$'
 
-- helm_merge_boiler_plate: &helm_merge_boiler_plate
-    name: helm_merge_boiler_plate
+    builders:
+      - shell: '{pre_build_script}'
+      - shell: '{build_script}'
+
+- job-template:
+    name: '{project-name}-{stream}-merge-helm'
+    # Job template for Helm merge jobs
+
+    <<: *helm_job_boiler_plate
+    # yamllint disable-line rule:key-duplicates
 
     scm:
       - gerrit-trigger-scm:
@@ -78,34 +93,41 @@
           files: '{files}'
       - pollscm:
           cron: ''
-
-#################
-# JOB TEMPLATES #
-#################
-- job-template:
-    name: '{project-name}-{stream}-verify-helm'
-    # Job template for helm verify jobs
-
-    <<: *helm_job_boiler_plate
-    # yamllint disable-line rule:key-duplicates
-    <<: *helm_verify_boiler_plate
+      - comment-added-contains-event:
+          comment-contains-value: '^remerge$'
 
     builders:
       - shell: '{pre_build_script}'
       - shell: '{build_script}'
+      - inject:
+          properties-content: |
+            BUILD_TYPE={build_type}
       - shell: '{post_build_script}'
 
 - job-template:
-    name: '{project-name}-{stream}-merge-helm'
-    # Job template for Helm merge jobs
+    name: '{project-name}-{stream}-stage-helm'
+    # Job template for Helm stage jobs
 
     <<: *helm_job_boiler_plate
-    # yamllint disable-line rule:key-duplicates
-    <<: *helm_merge_boiler_plate
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    triggers:
+      - pollscm:
+          cron: '0 22 * * *'
+      - comment-added-contains-event:
+          comment-contains-value: '^helm stage$'
 
     builders:
       - shell: '{pre_build_script}'
       - shell: '{build_script}'
+      - inject:
+          properties-content: |
+            BUILD_TYPE={build_type}
       - shell: '{post_build_script}'
 
 - job-template:
